Promjene napravljene za 4. laboratorijsku vjezbu