@@ -7,7 +7,6 @@ import org.springframework.stereotype.Repository;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 public class MockSeriesRepository implements SeriesRepository {
@@ -52,7 +51,7 @@ public class MockSeriesRepository implements SeriesRepository {
     public List<Series> findByTitle(String val) {
         return seriesList.stream()
                 .filter(s -> s.getTitle().toLowerCase().contains(val.toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void deleteById(Long id) {
@@ -62,15 +61,25 @@ public class MockSeriesRepository implements SeriesRepository {
     @Override
     public Series save(Series series) {
         if (series.getId() != null) {
-            deleteById(series.getId());
+            boolean exists = seriesList.stream().anyMatch(s -> s.getId().equals(series.getId()));
+            if (exists) deleteById(series.getId());
+
+            seriesList.add(series);
+        } else {
+            Long nextId = seriesList.stream()
+                    .mapToLong(s -> s.getId() != null ? s.getId() : 0L)
+                    .max()
+                    .orElse(0L) + 1;
+            series.setId(nextId);
+            seriesList.add(series);
         }
-        seriesList.add(series);
         return series;
     }
 
     @Override
     public void deleteByTitle(String title) {
-        seriesList.removeIf(s -> s.getTitle().equalsIgnoreCase(title));
+        if (title == null) return;
+        seriesList.removeIf(s -> s.getTitle() != null && s.getTitle().equalsIgnoreCase(title));
     }
 
 
